# RM_Code_record

./: CMakeLists.txt  main.cpp  mv_test.cpp  onnx_simplify.py  test.cpp  yolov8.cpp  yolov8.hpp
C++_end2end_openvino_detect/: CMakeLists.txt  demo.cpp  openvino_detect.cpp  openvino_detect.h
include/: hk_camera(without serial).hpp  hk_camera.hpp  mv_camera.hpp
io/: camera.cpp  camera.hpp
model/: armor.xml  middlev1.mapping
model/middle/: middle.xml
model/nano/: nano.xml
model/v7/: v7_1.mapping  v7_1.xml
model2/: small.xml
model_s/: middle_sim.mapping  middle_sim.xml
yolov5_openvino/: CMakeLists.txt  openvino_detect.h
